# slatedb-csharp-binding

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  ex-github  generate-binding.sh  get-slatedb-c-bindings.sh  main.rs  slatedb-csharp-binding.sln
.github/workflows/: build-ci.yaml  integration.yaml  release.yaml
rust/slatedb-ffi/: Cargo.toml  build.rs
rust/slatedb-ffi/alt/: alt_db.rs  alt_db_reader.rs  alt_iterator.rs  alt_object_store.rs  alt_post_0.10.1.sh  alt_post_0.11.2.sh  alt_wal_reader.rs
rust/slatedb-ffi/src/: lib.rs  main.rs
src/SlateDB/: SlateDb.cs  SlateDb.csproj  SlateDbException.cs  SlateDbOptions.cs
src/SlateDB/Handle/: SafeHandle.cs
src/SlateDB/Interop/: NativeMethods.g.cs  SlateDbLibrary.cs
src/SlateDb/: SlateDb.Batch.cs  SlateDb.Delete.cs  SlateDb.Get.cs  SlateDb.Merge.cs  SlateDb.Scan.cs  SlateDb.Write.cs  SlateDb.cs  SlateDb.csproj  SlateDbBuilder.cs  SlateDbEnumerable.cs  SlateDbEnumerator.cs  SlateDbException.cs  SlateDbExtensions.cs  SlateDbMetrics.cs  Status.cs  slate-db.snk
src/SlateDb-redist/: SlateDb-redist.csproj
src/SlateDb/Configuration/: AbstractSlateDbConfig.cs  AwsStoreConfig.cs  AzureStoreConfig.cs  GoogleStoreConfig.cs  ISlateDbConfiguration.cs  LocalStoreConfig.cs  MemoryStoreConfig.cs  SlateDbConfigurationAttribute.cs
src/SlateDb/Converter/: ISlateDbConverter.cs  SlateDbConvert.cs  SlateDbConverterExtensions.cs
src/SlateDb/Handle/: InternalHandleExtensions.cs  SafeHandle.cs
src/SlateDb/Interop/: DbBuilder.cs  NativeMethods.cs  NativeMethods.g.cs
src/SlateDb/Options/: Durability.cs  FlushOptions.cs  LogLevel.cs  MergeOptions.cs  PutOptions.cs  ReadOptions.cs  ReaderOptions.cs  ScanOptions.cs  (+6 more)
src/SlateDbLauncher/: Program.cs  SlateDbLauncher.csproj
src/SlateDbStarter/: Program.cs  SlateDbStarter.csproj
src/SlateDbUnitTests/: SlateDbUnitTest.cs  SlateDbUnitTests.csproj  SlateDb_BatchTest.cs  SlateDb_DeleteTest.cs  SlateDb_MergeTest.cs  SlateDb_ReadWriteUnitTest.cs  SlateDb_ReaderTest.cs  SlateDb_ScanTest.cs  UnitTest1.cs  WalReaderTest.cs
(+15 files in other folders)
