[package]
name = "slatedb-csharp-ffi"
version = "0.1.0"
edition = "2021"
authors = ["Sylvain Le Gouellec <sylvain.legouellec@gmail.com>"]
description = "C# FFI bindings for Slatedb (cdylib for P/Invoke)"
license = "Apache-2.0"
repository = "https://github.com/dotstream/slatedb-csharp-binding"
readme = "../../README.md"
keywords = ["slatedb", "ffi", "csharp", "bindings"]
build = "build.rs"

[lib]
name = "slatedb_csharp_ffi"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies] 
bytes = "1.11.1"
slatedb = "0.11.2"
once_cell = "1.21.3"
object_store = { version = "0.12.3" , features = ["azure", "aws", "fs", "gcp"]}
tokio = { version = "1.49.0", features = ["full"] }
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11"
uuid = "1.19.0"
humantime = "2.3.0"

[build-dependencies]
csbindgen = "1.9.7"
